Fix: CSS changed to accommodate long text: padding on top and bottom moved to content block; minor CSS fixes to the map

--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -25,7 +25,7 @@
             {% bookshop "generic/component-heading" primary_heading:content.heading %}
           {% endif %}
         
-          <div class="{{ c }}__content">
+          <div class="{{ c }}__contact-details--content">
             {% if content.description %}
               {% bookshop "generic/text-block" text:content.description %}
             {% endif %}          
