--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.scss
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.scss
@@ -5,11 +5,12 @@
     row-gap:48px;
 
     &.component{
-      padding:96px 0 0;
+      align-items:center;
+      padding:0;
     }
   
     &__content {
-      padding: 0;
+      padding: 96px 0 0;
       grid-column: 2 / -2;
     }
   
@@ -24,20 +25,27 @@
       padding-left: 1.5rem;
       display:flex;
       flex-direction:column;
-      align-items: flex-start;      
+      align-items: flex-start;              
 
       .c-social-icons, .c-labelled-icon{
         justify-content:flex-start;
+
+        p{
+          text-align:left;
+        }
       }
     }
 
-    &__contact-details, &__content{
+    &__contact-details, &__contact-details--content{
       display:flex;
       flex-direction: column;      
     }
         
-    &__contact-details{ gap: 24px; }
-    &__content{ gap:8px; }
+    &__contact-details{ 
+      gap: 24px;       
+
+      &--content{ gap:8px; }
+    }
    
     &__map-wrapper {
       aspect-ratio: 1 / 1;
@@ -49,16 +57,13 @@
   
     // Desktop styles
     @media screen and (min-width: 769px) {
-      &.component{
-        padding:0;
-      }
-
       &__content {
+        padding: 96px 0;
         grid-column: 2 / 7;
-        align-self: center;
       }
   
-      &__map-wrapper {       
+      &__map-wrapper {      
+        height:100%; 
         max-width:700px; 
         grid-column: 8 / -1;
         justify-self:start;
