Fix: make icons in inputs take main-color

--- a/component-library/components/simple/form-builder/form-builder.scss
+++ b/component-library/components/simple/form-builder/form-builder.scss
@@ -7,4 +7,8 @@
     &__submit-button {
         text-align: center;
     }
+
+    .c-icon__image, .c-icon__svg {
+        --c-icon-color: var(--main-text-color);
+    }
 }
