--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -30,7 +30,7 @@
   /* Colors */
   // User editable theme colors
   --primary-background-color: #004949;
-  --primary-foreground-color: #f9f100;
+  --primary-foreground-color: #e7bcbc;
   --secondary-background-color: #6c0000;
   --secondary-foreground-color: #d7ffee;
 
