--- a/component-library/components/simple/form-builder/form-builder.scss
+++ b/component-library/components/simple/form-builder/form-builder.scss
@@ -11,4 +11,8 @@
     .c-icon__image, .c-icon__svg {
         --c-icon-color: var(--main-text-color);
     }
+
+    & .error .c-icon__svg {
+        --c-icon-color: var(--error-color);
+    }
 }
