--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -9,22 +9,24 @@
         {% bookshop "{{imagery._bookshop_name}}" bind:imagery %}
     </div>
 
-    <header class="{{ c }}__header">
-        {% if heading.primary_heading %}
-            <h4 class="{{ c }}__header__primary_heading">
-                {{ heading.primary_heading }}
-            </h4>
-        {% endif %}
-        
-        {% if heading.eyebrow_headline %}
-            <h5 class="{{ c }}__header__eyebrow_heading">
-                {{ heading.eyebrow_headline }}
-            </h5>
-        {% endif %}
-    </header>
+    <div class="{{ c }}__content-wrapper">
+        <header class="{{ c }}__header">
+            {% if heading.primary_heading %}
+                <h4 class="{{ c }}__header__primary_heading">
+                    {{ heading.primary_heading }}
+                </h4>
+            {% endif %}
+            
+            {% if heading.eyebrow_headline %}
+                <h5 class="{{ c }}__header__eyebrow_heading">
+                    {{ heading.eyebrow_headline }}
+                </h5>
+            {% endif %}
+        </header>
 
-    <div class="{{c}}__content">{% bookshop "generic/text-block" text:content %}</div>
-    <div class="{{ c }}__button">
-        {% bookshop "generic/button" url:button.url text:button.text open_in_new_tab:button.open_in_new_tab variant:"secondary" disabled:false arrow:"right"%}
+        <div class="{{c}}__content">{% bookshop "generic/text-block" text:content %}</div>
+        <div class="{{ c }}__button">
+            {% bookshop "generic/button" url:button.url text:button.text open_in_new_tab:button.open_in_new_tab variant:"secondary" disabled:false arrow:"right"%}
+        </div>
     </div>
 </div>
