--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -14,15 +14,15 @@
     <div class="{{ c }}__content-wrapper">
         {% if content.heading %}
             <header class="{{ c }}__header">
-                {% if heading.primary_heading %}
+                {% if content.heading.primary_heading %}
                     <h4 class="{{ c }}__header__primary_heading">
-                        {{ heading.primary_heading }}
+                        {{ content.heading.primary_heading }}
                     </h4>
                 {% endif %}
                 
-                {% if heading.eyebrow_headline %}
+                {% if content.heading.eyebrow_headline %}
                     <h5 class="{{ c }}__header__eyebrow_heading">
-                        {{ heading.eyebrow_headline }}
+                        {{ content.heading.eyebrow_headline }}
                     </h5>
                 {% endif %}
             </header>
