--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -3,7 +3,11 @@
             {% if styles.background_variant == 'dark' %} 
                 component--dark
             {% endif %}
-            {% if content.imagery._bookshop_name == 'generic/image' %} {{ c }}--image {% else %} {{ c }}--icon {% endif %}">
+            {% if content.imagery._bookshop_name == 'generic/image' %} 
+                {{ c }}--image 
+            {% elsif content.imagery._bookshop_name == 'generic/icon' %} 
+                {{ c }}--icon 
+            {% endif %}">
 
     {% if content.imagery %}
         <div class="{{ c }}__imagery">
@@ -29,7 +33,7 @@
         {% endif %}
 
         <div class="{{c}}__content">{% bookshop "generic/text-block" text:content.text %}</div>
-        {% if button %}
+        {% if content.button %}
             <div class="{{ c }}__button">
                 {% bookshop "generic/button" url:content.button.url text:content.button.text open_in_new_tab:content.button.open_in_new_tab variant:"secondary" disabled:false arrow:"right"%}
             </div>
