--- a/component-library/components/simple/card/card.scss
+++ b/component-library/components/simple/card/card.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;    
     color:var(--brand-grey-000);    
-    gap:1.5rem;
+    gap:1.5rem;    
 
     &--icon{
       gap:1rem;
@@ -16,6 +16,10 @@
       display: flex;
       flex-direction: column;  
       gap: 1rem;
+      padding:1.5rem;
+    }
+
+    &--image &__content-wrapper, &--icon &__content-wrapper{
       padding:0 1.5rem 1.5rem;
     }
 
