--- a/component-library/components/sections/simple-text-block/simple-text-block.eleventy.liquid
+++ b/component-library/components/sections/simple-text-block/simple-text-block.eleventy.liquid
@@ -2,8 +2,8 @@
 
 
 <section class='{{c}} component 
-{% if styles.background_variant == 'dark' %} 
-    component--dark
+{% if styles.background_variant == 'secondary' %} 
+    component--secondary
 {% endif %} '>
     <div class='{{c}}__content'>
         {% bookshop "generic/component-heading" bind:content.heading %}
