--- a/component-library/components/simple/card/card.eleventy.liquid
+++ b/component-library/components/simple/card/card.eleventy.liquid
@@ -1,7 +1,7 @@
 {%  assign_local c = 'c-card' %}
 <div class="{{c}} component component--full-height
-            {% if styles.background_variant == 'dark' %} 
-                component--dark
+            {% if styles.background_variant == 'secondary' %} 
+                component--secondary
             {% endif %}
             {% if content.imagery._bookshop_name == 'generic/image' %} 
                 {{ c }}--image 
