--- a/component-library/components/simple/card/card.scss
+++ b/component-library/components/simple/card/card.scss
@@ -1,7 +1,7 @@
 .c-card {
     display: flex;
     flex-direction: column;    
-    color:var(--brand-grey-000);    
+    color: var(--main-text-color);
     gap:1.5rem;    
 
     &--icon{
