--- a/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
+++ b/component-library/components/sections/Left-right-block--Featured-map/Left-right-block--Featured-map.eleventy.liquid
@@ -4,8 +4,8 @@
     {% if styles.map_alignment == "Left" %}
         {{ c }}--map-left
     {% endif %} 
-    {% if styles.background_variant == "dark" %} 
-        component--dark
+    {% if styles.background_variant == "secondary" %} 
+        component--secondary
     {% endif %}'>
   <div class="{{ c }}__content">
     <div class="{{ c }}__content-wrapper">            
@@ -13,6 +13,12 @@
           {% if env_bookshop_live %}
             {% bookshop "generic/notification" heading:"Social Icons" text:"This is where your social icons will appear in the live site, but will not show in live editing in CloudCannon <br> You can edit the icons and their details in /data/site <br> This note only will only show in live editing" %}
           {% endif %}
+          {% capture social_icon_styles %}
+            icon_background_hover_color: "var(--main-text-color)"
+            icon_color: "var(--main-text-color)"
+            icon_hover_color: "var(--main-background-color)"
+          {% endcapture %}
+          {% assign_local social_icons_style = social_icon_styles | ymlify %}
           <div class="{{ c }}__social-icons">
             {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style %}
           </div>
@@ -33,7 +39,7 @@
                 icon_type: "outline"
                 hero_icon_name: {{ detail.hero_icon_name }}
                 rounded_border: true        
-                color: "#f9f9fb"
+                color:  "var(--main-text-color)"
               {% endcapture %}
               {% assign icon_styles = icon_styles | ymlify %}
               {% bookshop "generic/labelled-icon"
