--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -31,7 +31,13 @@
         </ul>
 
         <div class="{{ c }}__social-icons">
-            {% bookshop "generic/social-icons" social_media_links:site.social_media_links _liveRender:false %}
+            {% capture social_icon_styles %}
+                icon_background_hover_color: "var(--alt-text-color)"
+                icon_color: "var(--alt-text-color)"
+                icon_hover_color: "var(--alt-background-color)"
+            {% endcapture %}
+            {% assign_local social_icons_style = social_icon_styles | ymlify %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:social_icons_style _liveRender:false %}
         </div>
     </nav>
 </header>
