--- a/component-library/components/sections/left-right-block--featured-map-temp/left-right-block--featured-map-temp.eleventy.liquid
+++ b/component-library/components/sections/left-right-block--featured-map-temp/left-right-block--featured-map-temp.eleventy.liquid
@@ -1,4 +1,4 @@
-{% assign_local c = "c-contact-block" %}
+{% assign_local c = "c-left-right-block--featured-map" %}
 
 <section class='{{ c }} component {{ c }}
     {% if styles.map_alignment == "Left" %}
