--- a/component-library/components/sections/left-right-block--featured-map/left-right-block--featured-map.scss
+++ b/component-library/components/sections/left-right-block--featured-map/left-right-block--featured-map.scss
@@ -21,7 +21,7 @@
     }
   
     &__content-wrapper {
-      border-left: 0.0625rem solid var(--brand-grey-000);
+      border-left: 0.0625rem solid var(--main-text-color);
       padding-left: 1.5rem;
       display:flex;
       flex-direction:column;
