--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -8,6 +8,8 @@
 
 {% else %}
 
-    {% image image_path, image_alt, 'c-image', true %}
+    {%- assign sizes = "100vw" %}
+    NO LIVE EDITING
 
 {% endif %}
+
