Trying to fix a bug

--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -8,8 +8,6 @@
 
 {% else %}
 
-    {%- assign sizes = "100vw" %}
-    NO LIVE EDITING
+    {% image image_path, image_alt, 'c-image', true %}
 
 {% endif %}
-
